--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,23 +1,21 @@
 {
-  "name": "Mebious",
-  "short_name": "",
-  "theme_color": "#000000",
-  "background_color": "#000000",
-  "display": "fullscreen",
-  "scope": "/",
   "start_url": "/",
-  "orientation": "any",
+  "name": "Mebious - A Visual Novel Database Explorer",
+  "short_name": "Mebious",
   "icons": [
     {
-      "src": "/pwa.png",
-      "sizes": "512x512",
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/pwa.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
-  ]
+  ],
+  "background_color": "#75e15c",
+  "display": "standalone",
+  "theme_color": "#75e15c",
+  "description": "Mebious - A Visual Novel Database Explorer"
 }
